# did-system

./: .gitignore  Cargo.toml  README.md  did.db  hardhat.config.js  package-lock.json  package.json
artifacts/contracts/DIDRegistry.sol/: DIDRegistry.dbg.json  DIDRegistry.json
cache/: solidity-files-cache.json
contracts/: DID.sol  DIDRegistry.sol
examples/: check_blockchain.rs  generate_key.rs
frontend/: README.md  did.db  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/contracts/: DecentralizedID.json
frontend/src/pages/: CreateDID.tsx  Home.tsx  ResolveDID.tsx  UpdateDID.tsx
frontend/src/services/: api.ts
frontend/src/types/: did.ts
scripts/: blockchain_api.py  deploy.js  package-lock.json
src/: main.rs  types.rs  utils.rs
src/api/: did.rs  mod.rs
src/blockchain/: mod.rs
src/db/: mod.rs
src/did/: mod.rs
