[package]
name = "did-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8", "serde"] }
rand = "0.8"
bs58 = "0.5"
hex = "0.4"
env_logger = "0.10"
log = "0.4"
sha2 = "0.10"
ripemd = "0.1"
